--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
 				<span>Choose your Breed!</span>
 				
 				<section class="item">
-					<select name="" id="">
+					<select name="" id="" class="breeds">
 						<option value="starter" selected>Select Me!</option>
 					</select>
 				</section>
